# chatprove

./: metadata.json
chatproof/: Cargo.toml
chatproof/src/: lib.rs  tg_api.rs
pkg/: manifest.json  riscv32im-succinct-zkvm-elf
