[package]
name = "chatproof"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
chrono = "0.4.34"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "3232423" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
sp1-core = { path = "../../sp1/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
sha2 = "0.10.8"
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
